--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "bulma": "^0.8.0",
+    "electron-better-ipc": "^0.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
