--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "xbm": "^1.0.0"
   }
 }
